--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
-    <script src="/scripts/script.js" type="module" defer></script>
+    <script src="scripts/script.js" type="module" defer></script>
     <title>Game</title>
 </head>
 
