--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <script src="scripts/script.js" type="module" defer></script>
     <title>Game</title>
 </head>
 
 <body>
-    <div class="container col-12 col-md-8 col-lg-6 mt-3">
+    <div id="main" class="container col-11 col-md-8 col-lg-6 mt-3">
         <div id="game-board"></div>
     </div>
 </body>
