--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Marcin Rochowski" content="Game of 15'" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="scripts/script.js" type="module" defer></script>
-    <title>Game</title>
+    <title>Game of 15'</title>
 </head>
 
 <body>
