--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Marcin Rochowski" content="Game of 15'" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <script src="scripts/script.js" type="module" defer></script>
     <title>Game of 15'</title>
-</head>
+  </head>
 
-<body>
-    <div id="main" class="container col-11 col-md-8 col-lg-6 mt-3">
+  <body>
+    <div class="container col-11 col-md-8 col-lg-6 mt-3">
+      <h5 id="counter"></h5>
+      <div id="main">
         <div id="game-board"></div>
+      </div>
+      <div class="d-flex justify-content-between align-items-center mt-3">
+        <button id="easy" class="btn btn-success">Easy mode</button>
+        <button id="retry" class="btn btn-danger">Once again</button>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
